# git-status-prompt

./: .gitignore  CMakeLists.txt  README.md
cmake_modules/: FindLibGit2.cmake
src/: CMakeLists.txt  Git.h  GitReference.cpp  GitReference.h  GitRepository.cpp  GitRepository.h  GitRepositoryStatus.cpp  GitRepositoryStatus.h  config.h.in  gitprompt.c  main.cpp
